tests/paczka2/big_fuzzy/89884857.err
Error in line 1: A974 S445 79,2
Error in line 3: A974 A701 11,5
Error in line 5: BDcbkzzoe5m A974 43,0
Error in line 9: rwKJRI S445 40,1
Error in line 11: BDcbkzzoe5m A173 45,9
Error in line 20: Iju7fDBi A974 59,9
Error in line 24: Aw74 Aw74 5w,8
Error in line 21: Iju7fDBi A701 12,7
Error in line 35: iwMRV A701 10,8
Error in line 46: BDcbkzzoe5m S445 35,8
Error in line 50: BDcbkzzoe5m A701 -3,7
Error in line 56: LDe06bhdBJ S445 1842
Error in line 48: BDcbkzzoe5m A701 75,0
Error in line 55: LDe06bhdBJ S445 47,1
Error in line 94: iwMRV A173 -1,9
Error in line 90: r77sc A173 41,8
Error in line 107: r77sc A701 48,7
Error in line 110: rwKJRI A173 303,54
Error in line 115: rwKJRI S445 59,7
Error in line 132: LDe06bhdBJ S445 82,4
Error in line 136: A974 S445 47,3
Error in line 142: r77sc A701 81,3
Error in line 148: r77sc S445 98,3
Error in line 150: BDcbkzzoe5m A701 18,6
Error in line 86: iwMRV A173 7,4
Error in line 156: iwMRV S445 93,5
Error in line 163: iwMRV A701 -2,3
Error in line 171: Iju7fDBi A70O 9O,O
Error in line 165: BDcbkzzoe5m A701 0,6
Error in line 178: Iju7fDBi A173 66,68
Error in line 152: Iju7fDBi S445 142,2
Error in line 174: BDcbkzzoe5m A974 69,3
Error in line 181: Iju7fDBi A173 31,4
Error in line 162: iwMRV A701 41,8
Error in line 193: iwMRV A173 76,76
Error in line 192: rwKJRI A173 50,1
Error in line 208: BDcbkzzoe5m A701 44,6
Error in line 204: Iju7fDBi S445 36,1
Error in line 212: A974 A974 97,3
Error in line 169: r77sc A701 209,2
Error in line 214: A974 S445 6,3
Error in line 222: A974 A974 54,8
Error in line 224: A974 S445 98,5
Error in line 227: A974 A701 16,2
Error in line 209: rwKJRI A701 75,3
Error in line 228: A974 A173 39,8
Error in line 236: LDe06bhdBJ S445 90,4
Error in line 241: Iju7fDBi A701 117,3
